plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.matdongsan'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4' // MyBatis
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0' // swagger
	implementation platform("software.amazon.awssdk:bom:2.25.4") // aws s3
	implementation "software.amazon.awssdk:s3" // aws s3
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-logging'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'com.google.api-client:google-api-client:2.2.0'
	//구글 oauth
	implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
	implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
	// webp 변환 관련 의존성
	implementation "com.sksamuel.scrimage:scrimage-core:4.0.32"
	implementation "com.sksamuel.scrimage:scrimage-webp:4.0.32"
	//jsoup
	implementation 'org.jsoup:jsoup:1.21.1'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()

	jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}
